--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,62 @@
-<section>
+<section class="bg-[#effafa]">
   <img
     src="bg-header-desktop.svg"
     alt="Abstract geometric header"
     class="w-full bg-[#5ba4a4]"
   />
+
+  <section class="w-full flex flex-col justify-evenly items-center gap-4 py-8">
+    <div
+      *ngFor="let job of jobList"
+      [ngClass]="{
+        'border-l-5 border-[#5ba4a4]': job.featured,
+        'border-l-0': !job.featured
+      }"
+      class="w-2/3 bg-white p-6 flex flex-row justify-between rounded"
+    >
+      <div class="flex flex-row gap-4">
+        <!-- Company Logo -->
+        <img [src]="job.logo" [alt]="job.company" />
+        <!-- Main Details -->
+        <div class="h-full flex flex-col justify-evenly">
+          <div class="flex flex-row gap-2">
+            <h3 class="text-[#5ba4a4] font-bold">{{ job.company }}</h3>
+            <p
+              *ngIf="job.new"
+              class="flex items-center justify-center text-xs font-medium text-white bg-[#5ba4a4] px-2 py-0.5 rounded-xl uppercase leading-tight"
+            >
+              New!
+            </p>
+            <p
+              *ngIf="job.featured"
+              class="flex items-center justify-center text-xs font-medium text-white bg-[#2c3a3a] px-2 py-0.5 rounded-xl uppercase leading-tight"
+            >
+              featured
+            </p>
+          </div>
+          <h1 class="text-xl font-bold">{{ job.position }}</h1>
+          <div
+            class="flex flex-wrap items-center text-sm font-semibold text-[#7b8e8e] gap-x-2"
+          >
+            <span>{{ job.postedAt }}</span>
+            <span class="hidden sm:inline">•</span>
+            <span>{{ job.contract }}</span>
+            <span class="hidden sm:inline">•</span>
+            <span>{{ job.location }}</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex flex-row gap-4 items-center">
+        <div
+          class="px-2 py-1 bg-[#eef6f6] rounded"
+          *ngFor="let tag of getJobTags(job)"
+        >
+          <p class="text-[#5ba4a4] text-lg font-medium">{{ tag }}</p>
+        </div>
+      </div>
+    </div>
+  </section>
 </section>
 
 <router-outlet></router-outlet>
