add filter tag list component and styles,   - TODO:functionlity for choosing and removing tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,12 @@
   <img
     src="images/bg-header-desktop.svg"
     alt="Abstract geometric header"
-    class="w-full bg-[#5ba4a4]"
+    class="w-full bg-[#5ba4a4] -mb-20"
   />
 
+  <app-filter-tag-list />
+
   <app-job-list />
-  
 </section>
 
 <router-outlet></router-outlet>
