--- a/src/app/components/filter-tag-list/filter-tag-list.component.html
+++ b/src/app/components/filter-tag-list/filter-tag-list.component.html
@@ -1,14 +1,30 @@
 <section class="w-full flex items-center justify-center">
   <div
+    *ngIf="selectedTags$ | async as selectedTags"
     class="w-2/3 flex flex-row justify-between items-center bg-white px-14 py-6 rounded shadow-xl/20 shadow-[#5ba4a4]"
+    [ngClass]="{
+      'opacity-100 visible': selectedTags.length > 0,
+      'opacity-0 invisible': selectedTags.length === 0
+    }"
   >
-    <div class="flex items-center rounded bg-[#eef6f6]">
-      <p class="text-[#5ba4a4] text-lg font-semibold px-4">Test</p>
-      <Button (click)="removeFilterTag()" class="flex items-center justify-center p-3 bg-[#5ba4a4] rounded-r cursor-pointer hover:bg-[#2c3a3a] transition duration-200">
-        <img src="images/icon-remove.svg" alt="remove" />
-      </Button>
+    <div class="flex items-center gap-3 h-full">
+      <div
+        class="flex items-center rounded bg-[#eef6f6]"
+        *ngFor="let tag of selectedTags"
+      >
+        <p class="text-[#5ba4a4] text-lg font-semibold px-4">{{ tag }}</p>
+        <Button
+          (click)="removeFilterTag(tag)"
+          class="flex items-center justify-center p-3 bg-[#5ba4a4] rounded-r cursor-pointer hover:bg-[#2c3a3a] transition duration-200"
+        >
+          <img src="images/icon-remove.svg" alt="remove" />
+        </Button>
+      </div>
     </div>
-    <button class="text-lg text-[#5ba4a4] font-semibold hover:underline cursor-pointer">
+    <button
+      (click)="clearAll()"
+      class="text-lg text-[#5ba4a4] font-semibold hover:underline cursor-pointer"
+    >
       Clear
     </button>
   </div>
