--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,13 @@
   <app-filter-tag-list />
 
   <app-job-list />
+
+  <div
+    *ngIf="showNotification"
+    class="fixed bottom-4 right-4 bg-gray-800 text-white px-4 py-2 rounded shadow-lg animate-fade-in-out transition-opacity duration-300"
+  >
+    {{ notificationMessage }}
+  </div>
 </section>
 
 <router-outlet></router-outlet>
