--- a/src/app/components/job-list/job-list.component.html
+++ b/src/app/components/job-list/job-list.component.html
@@ -9,7 +9,7 @@
   >
     <div class="flex flex-row gap-4">
       <!-- Company Logo -->
-      <img [src]="job.logo" [alt]="job.company" class="absolute md:static -top-[10%] w-[20%] lg:w-auto lg:h-auto" />
+      <img [src]="job.logo" [alt]="job.company" class="absolute md:static -top-[10%] w-[20%] md:w-auto" />
       <!-- Main Details -->
       <div class="h-full flex flex-col justify-evenly pt-5 md:p-0 gap-2 md:gap-0">
         <div class="flex flex-row gap-2">
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <hr class="block w-[90%] border-[#7b8e8e] my-4 lg:hidden">
+    <hr class="block border-[#d3d3d3] border-t-2 my-4 lg:hidden">
 
     <!-- Job specifications -->
     <div class="flex flex-row gap-4 items-center flex-wrap">
